<resources>
    <string name="app_name">Money Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_transaction_title">Añadir compra</string>


    <string name="error_spinner_requiered">Debe seleccionar una opción</string>
    <string name="error_edittext_requiered">Este campo es obligatorio</string>


    <string name="persona_quien_realizo_compra_required">Persona quien realizó la compra *</string>
    <string name="hint_value">10000</string>
    <string name="valor_total_compra_realizada_required">Valor total de la compra *</string>
    <string name="add">Agregar</string>
    <string name="comentario">Comentario</string>
    <string name="splash_license">\@designer_krish</string>


    <string name="error_get_data">Error al obtener información.</string>
    <string name="error_set_data">Error al realizar operación.</string>
    <string name="error_login">Error al iniciar sesión.</string>
    <string name="error_team_doesnt_found">El grupo financiero no se pudo encontrar.</string>


    <string name="logout">Cerrar sesión</string>
    <string name="add_team_title">Unirse a grupo financiero</string>
    <string name="join">Unirse</string>
    <string name="id_team_required">ID grupo financiero *</string>
    <string name="create_team_title">Crear grupo financiero</string>
    <string name="id_name_team_required">Nombre grupo financiero *</string>
    <string name="create">Crear</string>
    <string name="accept">Aceptar</string>
    <string name="logut_confirm">¿Desea cerrar sesión?</string>
    <string name="cancel">Cancelar</string>
    <string name="error">Error</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_team_creation">¿Estás seguro de crear un grupo financiero llamado #name?</string>
    <string name="login">Iniciar sesión</string>

    <string name="add_transaction_success">Operación realizada con éxito</string>
    <string name="no_se_encontraron_registros">No se encontraron registros</string>
    <string name="copy_team_id">Copiar ID grupo financiero</string>
    <string name="id_team_copiado">ID del grupo financiero copiado en el portapapeles.</string>

</resources>