<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/fragments_padding"
    tools:context=".Fragments.Transactions.AddTransactionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_transaction_title"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_content_sp_persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/persona_quien_realizo_compra_required"
                android:textColor="@color/grisPolvo"
                android:textSize="@dimen/small_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_persons"
                style="@style/SpinnerTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/tv_error_sp_persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/errorDark"
                android:textSize="@dimen/small_size"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_content_et_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/valor_total_compra_realizada_required"
                android:textColor="@color/grisPolvo"
                android:textSize="@dimen/small_size"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_value"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/background_border_gray_fill_empty_rounded"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="5dp"
                    android:hint="@string/hint_value"
                    android:inputType="number"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/normal_size"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error_et_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/errorDark"
                android:textSize="@dimen/small_size"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_content_et_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comentario"
                android:textColor="@color/grisPolvo"
                android:textSize="@dimen/small_size"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/background_border_gray_fill_empty_rounded"
                    android:inputType="text"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/normal_size"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_transaction"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/blue_border_button"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normal_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>