<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragments_padding"
    tools:context=".Fragments.Transactions.AddJoinTeamFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_join_team_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_team_title"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_join_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_id_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/id_team_required"
                    android:textColor="@color/grisPolvo"
                    android:textSize="@dimen/small_size"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_id_team"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/background_border_gray_fill_empty_rounded"
                        android:drawablePadding="5dp"
                        android:inputType="text"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textSize="@dimen/normal_size"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_error_et_id_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/error_edittext_requiered"
                    android:textColor="@color/errorDark"
                    android:textSize="@dimen/small_size"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/blue_border_button"
                    android:text="@string/join"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisPolvo" />

            <TextView
                android:id="@+id/tv_create_team_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/create_team_title"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_create_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_name_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/id_name_team_required"
                    android:textColor="@color/grisPolvo"
                    android:textSize="@dimen/small_size"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name_team"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/background_border_gray_fill_empty_rounded"
                        android:drawablePadding="5dp"
                        android:inputType="text"
                        android:maxLength="15"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textSize="@dimen/normal_size"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">

                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_error_et_name_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/error_edittext_requiered"
                    android:textColor="@color/errorDark"
                    android:textSize="@dimen/small_size"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/blue_border_button"
                    android:text="@string/create"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/normal_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>